<resources>
    <string name="app_name">Tecnologias Móviles</string>
    <string name="title_activity_display_screen2">DisplayScreen2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_display_screen">DisplayScreen</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_logout">Logout</string>
    <string name="cambiar_nombre_de_usuario">Cambiar nombre de usuario</string>
    <string name="usuario_hint">Usuario</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="contrase_a_anterior">Contraseña anterior</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="guardar_perfil">Guardar</string>
    <string name="cambiar_foto_de_perfil">Toque en la foto para cambiar</string>
</resources>
