<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_config" />
    </group>

    <item android:title="Sesion">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
