<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.guillermomadoery.examen.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.guillermomadoery.examen.ui.pefil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.guillermomadoery.examen.ui.mapa.MapaFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.guillermomadoery.examen.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.guillermomadoery.examen.ui.mapa.MapaFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>